--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,35 @@
 /* Import fonts from fonts.css */
-@import url(./fonts.css);
+/* @import url(./fonts.css); */
+@import url('https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap');
+
+/* CSS Variables */
+@import url(./partials/_variables.css);
+
+/* start navigation */
+.header_area .main-menu .navbar .navbar-brand{
+    padding: 0 2rem 0 2rem;
+}
+/* .header_area .main-menu .navbar{
+    padding: 1rem 20rem;
+} */
+.header_area .main-menu .nav-item .nav-link{
+    font-weight: 900;
+    font-family: var(--overpass);
+    /* color: var(--title-color); */
+}
+
+.header_area .main-menu .navbar-nav .active a{
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+.header_area .main-menu .navbar-nav a:hover{
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+/* end navigation */
