--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -18,4 +18,5 @@ html, body{
 
     /* font family variables */
     --overpass: 'Overpass Mono', monospace;
+    --nanum: 'NanumGothicCoding', monospace;
 }
