--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Import fonts from fonts.css */
-@import url(./fonts.css);
-/* @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap'); */
+/* @import url(./fonts.css); */
+@import url('https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap');
 
 /* CSS Variables */
 @import url(./partials/_variables.css);
@@ -14,8 +14,8 @@
 } */
 .header_area .main-menu .nav-item .nav-link{
     font-weight: 900;
-    /* font-family: var(--overpass); */
-    font-family: 'NanumGothicCoding', monospace;
+    font-family: var(--overpass);
+    /* font-family: 'NanumGothicCoding', monospace; */
 
     /* color: var(--title-color); */
 }
