--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 /* CSS Variables */
 @import url(./partials/_variables.css);
 
+/* global styling */
+@import url(./partials/_global.css);
+
 /* start navigation */
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 2rem;
@@ -35,3 +38,39 @@
 }
 
 /* end navigation */
+
+/* Banner area */
+/* .site-main .site-banner {
+    /* background: url(../img/banner/home-banner.png) no-repeat; */
+    /* background-position: 0% 50%; */
+
+.site-main .site-banner .site-title h3 {
+    padding-top: 35%;
+    font-weight: 500;
+}
+
+/* .site-main .site-banner .site-title h3::after {
+    content: "";
+    height: 2px;
+    width: 18vw;
+    background: black;
+    display: inline-block;
+    margin-left: 5%;
+    transform: translateY(-10px);
+} */
+
+.site-main .site-banner .site-title h1 {
+    font-size: 5rem;
+}
+.site-main .site-banner .site-title h4 {
+    font-size: 1.5rem;
+}
+
+.site-main .site-banner .banner-image > img{
+    padding: 4rem 0;
+    /* width: 30rem; */
+}
+
+
+
+/* End Banner area */
