--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,8 @@
 /* @font-face */
 @font-face {
-    font-family: "NanumGothicCoding";
+    font-family: "Overpass Mono";
     /* src: '../fonts/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf'; */
-    src: url('../fonts/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf');
+    /* src: url('../fonts/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf'); */
+    src: url('../fonts/Overpass_Mono/OverpassMono-Regular.ttf');
 
 }
