--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Import fonts from fonts.css */
-/* @import url(./fonts.css); */
-@import url('fonts.googleapis.com/css2?family=Overpass+Mono&display=swap');
+@import url(./fonts.css);
+/* @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap'); */
+
 
 /* CSS Variables */
 @import url(./partials/_variables.css);
