--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,5 +3,5 @@
     font-family: "Overpass Mono";
     /* src: '../fonts/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf'; */
     /* src: url('../fonts/Nanum_Gothic_Coding/NanumGothicCoding-Regular.ttf'); */
-    src: url('tojumikie.github.io/OverpassMono-Regular.ttf') format('truetype');
+    src: url('https://tojumikie.github.io/OverpassMono-Regular.ttf') format('truetype');
 }
