--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -1,8 +1,23 @@
+/* Global Classes */
 .title-text {
     /* font: normal bold 50px/72 Arial; */
     font-style: normal;
     /* font-weight: ; */
     font-family: var(--overpass);
     font-weight: 700;
+}
 
+/* Buttons */
+.button {
+    padding: 0.8rem 2.2rem;
+    font: normal 500 16px/20px var(--overpass);
+    positon: relative;
+    border: 3px solid transparent;
+    border-radius: 4px;
+}
+
+.button.primary-button{
+    background: var(--gradient-color);
+    /* background-clip: padding-box; */
+    color: whitesmoke;
 }
