updated front page with some dummy information

--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -11,13 +11,55 @@
 .button {
     padding: 0.8rem 2.2rem;
     font: normal 500 16px/20px var(--overpass);
-    positon: relative;
+    position: relative;
     border: 3px solid transparent;
     border-radius: 4px;
+    margin-bottom: 5px;
+    /* color: black; */
 }
 
 .button.primary-button{
     background: var(--gradient-color);
     /* background-clip: padding-box; */
     color: whitesmoke;
+    /* transition-property: background; */
+    transition-duration: .5s;
+    transition-delay: 0s;
+    transition-timing-function: ease;
+    box-shadow: var(--box-shadow);
+}
+ 
+.button.primary-button:hover {
+    background: whitesmoke;
+    background-clip: padding-box;
+    color: black;
+}
+
+.button.primary-button::after /*.button.button.secondary-button::after*/{
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    bottom: -2px;
+    right: -2px;
+    background: var(--gradient-color);
+    content: '';
+    z-index: -1;
+    border-radius: 4px;
+}
+
+.button.secondary-button {
+    background: white;
+    background-clip: padding-box;
+    transition-duration: .5s;
+    transition-delay: 0s;
+    transition-timing-function: ease;
+    /* box-shadow: var(--box-shadow); */
+    border-color: black;
+}
+
+
+.button.secondary-button:hover {
+    background: var(--gradient-color);
+    color: black;
+    box-shadow: var(--box-shadow);
 }
