added a few more sections to the front page

--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -63,3 +63,12 @@
     color: black;
     box-shadow: var(--box-shadow);
 }
+
+p.para {
+    /* color: var(--text-color); */
+    font: normal 500 16px/25px var(--overpass);
+}
+
+.font-overpass {
+    font-family: var(--overpass);
+}
