--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
 /* start navigation */
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 2rem;
+    font-family: var(--overpass);
+    font-weight: 900;
 }
 /* .header_area .main-menu .navbar{
     padding: 1rem 20rem;
@@ -82,6 +84,121 @@
 .site-main .about-area .about-title h2 > span {
     /* display: block; */
     font: normal bold 49px/60px var(--overpass);
-
 }
+.site-main .about-area .about-title .paragraph > p {
+    padding: .4rem 0;
+}
+
 /* End About Area */
+
+/* Start Brand Area */
+.site-main .brand-area {
+    padding: 1rem 2rem;
+    margin-bottom: 4rem;
+}
+.site-main .brand-area .first-row .col-lg-4 {
+    display: flex;
+    justify-content: center;
+}
+.site-main .brand-area .first-row .col-lg-4 > .single-brand {
+    border: 1px solid var(--border-color);
+    text-align: center;
+    padding: 1.8rem 0rem;
+    margin: .9rem 0;
+    width: 180px;
+    height: 100px;
+    cursor: pointer;
+    transition: transform .4s ease;
+}
+.site-main .brand-area .first-row .col-lg-4 > .single-brand > img {
+    width: 50%;
+}
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover {
+    box-shadow: var(--box-shadow);
+    transform: scale(1.1);
+}
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img {
+    filter: brightness(0.15);
+}
+.site-main .brand-area .experience-area {
+    padding-left: 1rem;
+}
+.site-main .brand-area .experience-area span{
+   display: block;
+}
+.site-main .brand-area .experience-area .years-area {
+    background: url(../img/client-info-bg.png) no-repeat 45px 20px;
+    padding: 2rem 0;
+    width: 40rem;
+    height: 18rem;
+    padding-left: 8rem;
+    position: relative;
+}
+.site-main .brand-area .experience-area .years-area .years {
+    font: normal bold 84px/40px var(--overpass);
+    color: var(--primary-color2);
+    z-index: 2;
+}
+.site-main .brand-area .experience-area .years-area h2 > span {
+    font: normal 600 22px/30px var(--overpass);
+}
+.site-main .brand-area .experience-area .call-area {
+    padding-left: 10rem;
+}
+.site-main .brand-area .experience-area .bg-panel {
+    /* position: absolute; */
+    /* left: -190px; top: 0%; */
+    /* bottom: 100px; */
+    /* background: #e029290a; */
+    /* width: 400px; */
+    /* height: 400px; */
+    /* margin-left: 100px; */
+    /* z-index: -1; */
+}
+/* End Brand Area */
+
+/* Start Services Area */
+.site-main .services-area {
+    padding: 7rem 2rem;
+}
+.site-main .services-area .services-title {
+    padding: 0 14rem;
+}
+.site-main .services-area .services-title h1 {
+    font-size: 35px;
+}
+.site-main > .services-area .services {
+    background: rgba(248, 252, 253, 0.973);
+    padding: 2rem 0rem;
+    width: 16rem;
+    margin: 5rem .5rem;
+    transition: box-shadow .7s ease;
+}
+.site-main > .services-area .services:hover {
+    box-shadow: var(--box-shadow);
+}
+/* End Services Area */
+
+/* Start Project Section */
+
+.site-main .project-area {
+    padding: 4rem 0;
+}
+.site-main .project-area .button-group button {
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--overpass);
+}
+.site-main .project-area .button-group button + button {
+    /* padding-left: 3rem; */
+}
+.site-main .project-area .grid .our-project > .title h4 {
+    font: normal 700 25px/12px var(--overpass);
+}
+button:focus, button:active button:hover
+.btn:active, .btn.active {
+    outline: 0px !important;
+    box-shadow: none !important;
+}
+
+/* End Project Section */
