--- a/css/style.css
+++ b/css/style.css
@@ -200,5 +200,94 @@ button:focus, button:active button:hover
     outline: 0px !important;
     box-shadow: none !important;
 }
-
+.site-main .project-area .grid .our-project .img a:hover img {
+    filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
+}
 /* End Project Section */
+
+/* Start What Clients Say About Me Section */
+.site-main .about-area .about-title p {
+    padding: 1rem 7rem;
+}
+.site-main .about-area .client {
+    background: #ffffff10;
+    box-shadow: var(--box-shadow);
+    margin: 3rem 0rem;
+}
+.site-main .about-area .client .client-img {
+    padding: 2rem;
+}
+.site-main .about-area .client .about-client {
+    padding-top: 2rem;
+}
+.site-main .about-area .client .about-client h4 {
+    font: normal 500 21px/20px var(--overpass);
+}
+.site-main .about-area .client .about-client h4 {
+    font: normal 500 21px/20px var(--overpass);
+}
+.site-main .about-area .cli .about-client p {
+    font-size: 14px;
+}
+.site-main .about-area .owl-carousel .owl-item {
+    display: flex;
+    justify-content: center;
+    padding: 0 1.5rem;
+}
+.site-main .about-area .owl-carousel .owl-dots .owl-dot.active span {
+    background-color: var(--primary-color);
+    width: 12px;
+    height: 12px;
+}
+/* End What Clients Say About Me Section */
+
+/* Start Email Subscription Section */
+.site-main .subscribe-us-area .subscribe {
+    background: url(../img/subscribe-bg.png) no-repeat;
+    padding: 10rem 0;
+    margin: 3rem auto;
+}
+.site-main .subscribe-us-area .subscribe .subscribe-title h4 {
+    font: normal 700 30px/30px var(--overpass);
+    color: whitesmoke;
+}
+.site-main .subscribe-us-area .subscribe .subscribe-title p {
+    color: whitesmoke;
+    padding: 1rem 4rem;
+}
+.site-main .subscribe-us-area .subscribe form .input-textbox input {
+    width: 400px;
+    padding: .7rem 1.5rem;
+    border: 1px solid whitesmoke;
+    background: transparent;
+    color: white;
+    font: normal 500 17px/20px var(--overpass);
+}
+.site-main .subscribe-us-area .subscribe form .input-textbox input::placeholder {
+    color: whitesmoke;
+}
+.site-main .subscribe-us-area .subscribe form .btn-submit button {
+    background: whitesmoke;
+    color: #000;
+    padding: .7rem 1rem;
+}
+/* .site-main .subscribe-us-area .subscribe form */
+/* End Email Subscription Section */
+
+/* Start Footer Area */
+footer.footer-area {
+    padding: 1rem 0;
+    background: url(../img/footer-bg.png) no-repeat;
+}
+footer.footer-area .social h5 {
+    font: normal 900 23px/30px var(--overpass);
+}
+footer.footer-area .social a > i {
+    font-size: 22px;
+    padding: 1rem;
+    color: var(--border-color);
+}
+footer.footer-area .social a:hover > i {
+    color: var(--primary-color);
+}
+/* End Footer Area */
