--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,14 @@
     font-family: var(--overpass);
     /* font-family: 'NanumGothicCoding', monospace; */
 
-    /* color: var(--title-color); */
+    color: var(--title-color);
 }
 .header_area .main-menu .nav-item .dropdown-menu{
     font-weight: 900;
     font-family: var(--overpass);
     /* font-family: 'NanumGothicCoding', monospace; */
 
-    /* color: var(--title-color); */
+    color: var(--title-color);
 }
 .header_area .main-menu .navbar-nav .active a{
     background: var(--gradient-color);
