--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
     padding: 1.8rem 0rem;
     margin: .9rem 0;
     width: 180px;
-    height: 100px;
+    height: 120px;
     cursor: pointer;
     transition: transform .4s ease;
 }
@@ -124,7 +124,7 @@
     transform: scale(1.1);
 }
 .site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img {
-    filter: brightness(0.15);
+    filter: brightness(0.9);
 }
 .site-main .brand-area .experience-area {
     padding-left: 1rem;
@@ -175,9 +175,10 @@
 }
 .site-main > .services-area .services {
     background: rgba(248, 252, 253, 0.973);
-    padding: 2rem 0rem;
-    width: 16rem;
-    margin: 1rem .5rem;
+    height: 200px;
+    /* padding: 2rem 0rem; */
+    /* width: 16rem; */
+    /* margin: 1rem .5rem; */
     transition: box-shadow .7s ease;
 }
 .site-main > .services-area .services:hover {
